RecyclerView対応を強化 ServerList系全対応完了 テストはN5のみ